# smep

./: .gitignore  README.md  flake.nix  pyproject.toml
nix/: python.nix
src/smep/cli/: __init__.py  data.py  model.py
src/smep/data/: __init__.py  kaggle.py  mimic.py
src/smep/data/builders/: __init__.py  builder.py  default.py  schema.py  writer.py
src/smep/data/exporters/: __init__.py  base.py  comorbidity.py  infection.py  mimic.py  quality.py  schema.py  scores.py  sepsis.py  writer.py
src/smep/data/fetchers/: __init__.py  fetcher.py  mimic.py
src/smep/data/processors/: __init__.py  mimic.py  processor.py
src/smep/data/resources/: mimic_temporal_features.json
src/smep/models/: __init__.py  data_loader.py  dnn.py  evaluator.py  explainer.py  feature_selector.py  model.py  xgboost.py
