[project]
name = "smep"
version = "0.1.0"
description = "Sepsis Mortality Explainable Prediction"
authors = [{ name = "Dessera", email = "dessera@qq.com" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "joblib>=1.5.2",
  "kaggle>=2.0.0",
  "numpy>=2.3.3",
  "pandas>=2.3.2",
  "scikit-learn>=1.7.2",
  "shap>=0.49.1",
  "typer>=0.24.1",
  "xgboost>=3.2.0",
]

[project.scripts]
smep = "smep:cli.app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.ruff]
line-length = 80
