[project]
name = "smep"
version = "0.1.0"
description = "Sepsis Mortality Explainable Prediction"
authors = [{ name = "Dessera", email = "dessera@qq.com" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "joblib>=1.5.3",
  "kaggle>=2.0.0",
  "matplotlib>=3.10.8",
  "numpy>=2.4.3",
  "pandas>=3.0.1",
  "scikit-learn>=1.8.0",
  "shap>=0.51.0",
  "typer>=0.24.1",
  "xgboost>=3.2.0",
]

[project.scripts]
smep = "smep:cli.app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.ruff]
line-length = 80
